adjust rotation to settings in addtasks #22

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -756,13 +756,14 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
       }
 
       if (shouldReplace) {
-        tasksByTitle[task.title] = {
-          turns: [],
-          pendingCount: 0,
-          date: task.date,
-          userOrder: task.users || [],
-          startDate
-        };
+  tasksByTitle[task.title] = {
+    turns: [],
+    pendingCount: 0,
+    date: task.date,
+    userOrder: task.users || [],
+    settings: task.settings || "Rotation", // ← this is the fix
+    startDate
+  };
       } else {
         console.warn(`Duplicate task title: ${task.title}, date: ${task.date}, keeping date: ${existingTask.date}`); // Debug
         return;
@@ -811,15 +812,20 @@ if (isRotation) {
 
       console.log(`Task ${task.title}: fullTurn=${fullTurn}`); // Debug
 
-      fullTurn.forEach((user, index) => {
-        tasksByTitle[task.title].turns.push({
-          user,
-          index,
-          date: task.date,
-          isPending: pendingCompletions.includes(user),
-          isCompleted: completions.includes(user)
-        });
-      });
+      fullTurn.forEach((entry, index) => {
+  const user = entry.user;
+  const repetition = entry.repetition || index + 1;
+
+  tasksByTitle[task.title].turns.push({
+    user,
+    repetition,
+    index,
+    date: task.date,
+    isPending: pendingCompletions.includes(user),
+    isCompleted: completions.includes(user)
+  });
+});
+
     });
 
     // Log all duplicates
@@ -842,102 +848,132 @@ if (isRotation) {
     }
 
     Object.keys(tasksByTitle).sort().forEach(title => {
-      const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
-      const div = document.createElement("div");
-      div.className = "task-entry";
-      div.dataset.title = title;
-      div.dataset.date = date;
-      div.innerHTML = `
-        <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
-        <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
-          ${turns.map(turn => `
-            <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
-              <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
-              ${turn.isPending && !turn.isCompleted ? `
-                <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
-                <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
-              ` : turn.isCompleted ? `
-                <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
-              ` : `
-                <select id="replace-select-${turn.index}">
-                  <option value="">Select User</option>
-                  ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
-                </select>
-                <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
-              `}
-            </div>
-          `).join('')}
-        </div>
-      `;
-      container.appendChild(div);
+  const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
+  const div = document.createElement("div");
+  div.className = "task-entry";
+  div.dataset.title = title;
+  div.dataset.date = date;
+  div.innerHTML = `
+    <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
+    <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
+      ${
+        tasksByTitle[title].turns.length && turns[0].repetition !== undefined && turns[0].user !== undefined && tasksByTitle[title].turns
+          ? (tasksByTitle[title].settings === "Rotation"
+            ? turns.map(turn => `
+              <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
+                <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
+                ${turn.isPending && !turn.isCompleted ? `
+                  <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                  <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                ` : turn.isCompleted ? `
+                  <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
+                ` : `
+                  <select id="replace-select-${turn.index}">
+                    <option value="">Select User</option>
+                    ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                  </select>
+                  <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
+                `}
+              </div>
+            `).join('')
+            :
+            userOrder.map(user => {
+              const userTurns = turns.filter(t => t.user === user);
+              return `
+                <h4 style="margin-top: 10px;">${user}</h4>
+                ${userTurns.map(turn => `
+                  <div class="turn-entry" draggable="false" data-index="${turn.index}" data-user="${turn.user}">
+                    <p>Attempt ${turn.repetition}: ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
+                    ${turn.isPending && !turn.isCompleted ? `
+                      <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                      <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                    ` : turn.isCompleted ? `
+                      <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
+                    ` : `
+                      <select id="replace-select-${turn.index}">
+                        <option value="">Select User</option>
+                        ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                      </select>
+                      <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
+                    `}
+                  </div>
+                `).join('')}
+              `;
+            }).join(''))
+          : '<p>No turns assigned.</p>'
+      }
+    </div>
+  `;
+  container.appendChild(div);
 
-      div.querySelector(".task-title").addEventListener("click", () => {
-        const details = div.querySelector(".task-details");
-        details.classList.toggle("show");
-        if (details.classList.contains("show")) {
-          expandedTasks.add(title);
-        } else {
-          expandedTasks.delete(title);
-        }
-      });
+  div.querySelector(".task-title").addEventListener("click", () => {
+    const details = div.querySelector(".task-details");
+    details.classList.toggle("show");
+    if (details.classList.contains("show")) {
+      expandedTasks.add(title);
+    } else {
+      expandedTasks.delete(title);
+    }
+  });
 
-      const turnEntries = div.querySelectorAll(".turn-entry");
-      turnEntries.forEach(turn => {
-        turn.addEventListener("dragstart", (e) => {
-          turn.classList.add("dragging");
-          e.dataTransfer.setData("text/plain", JSON.stringify({
-            index: parseInt(turn.dataset.index),
-            title,
-            date
-          }));
-        });
-
-        turn.addEventListener("dragend", () => {
-          turn.classList.remove("dragging");
-          turnEntries.forEach(t => t.classList.remove("drag-over"));
-        });
-
-        turn.addEventListener("dragover", (e) => {
-          e.preventDefault();
-          const dragging = document.querySelector(".dragging");
-          if (dragging !== turn) {
-            turn.classList.add("drag-over");
-          }
-        });
-
-        turn.addEventListener("dragleave", () => {
-          turn.classList.remove("drag-over");
-        });
-
-        turn.addEventListener("drop", async (e) => {
-          e.preventDefault();
-          turn.classList.remove("drag-over");
-          const dragData = JSON.parse(e.dataTransfer.getData("text/plain"));
-          const draggedIndex = dragData.index;
-          const droppedIndex = parseInt(turn.dataset.index);
-
-          if (draggedIndex !== droppedIndex && dragData.title === title && dragData.date === date) {
-            const currentUsers = userOrder.slice();
-            [currentUsers[draggedIndex], currentUsers[droppedIndex]] = [currentUsers[droppedIndex], currentUsers[draggedIndex]];
-            const draggedTurnData = turns[draggedIndex];
-            const droppedTurnData = turns[droppedIndex];
-            turns[draggedIndex] = { ...droppedTurnData, user: currentUsers[draggedIndex], index: draggedIndex };
-            turns[droppedIndex] = { ...draggedTurnData, user: currentUsers[droppedIndex], index: droppedIndex };
-            const draggedTurn = turnEntries[draggedIndex];
-            const droppedTurn = turnEntries[droppedIndex];
-            const draggedUser = currentUsers[draggedIndex];
-            const droppedUser = currentUsers[droppedIndex];
-            const draggedStatus = turns[draggedIndex].isCompleted ? 'Accepted' : turns[draggedIndex].isPending ? 'Waiting for Review' : 'Pending';
-            const droppedStatus = turns[droppedIndex].isCompleted ? 'Accepted' : turns[droppedIndex].isPending ? 'Waiting for Review' : 'Pending';
-            draggedTurn.querySelector("p").textContent = `Turn ${draggedIndex + 1}: ${draggedUser} - ${draggedStatus}`;
-            droppedTurn.querySelector("p").textContent = `Turn ${droppedIndex + 1}: ${droppedUser} - ${droppedStatus}`;
-            draggedTurn.dataset.user = draggedUser;
-            droppedTurn.dataset.user = droppedUser;
-            await handleReorder(title, date, currentUsers);
-          }
-        });
-      });
+  const turnEntries = div.querySelectorAll(".turn-entry");
+  turnEntries.forEach(turn => {
+    turn.addEventListener("dragstart", (e) => {
+      turn.classList.add("dragging");
+      e.dataTransfer.setData("text/plain", JSON.stringify({
+        index: parseInt(turn.dataset.index),
+        title,
+        date
+      }));
     });
+
+    turn.addEventListener("dragend", () => {
+      turn.classList.remove("dragging");
+      turnEntries.forEach(t => t.classList.remove("drag-over"));
+    });
+
+    turn.addEventListener("dragover", (e) => {
+      e.preventDefault();
+      const dragging = document.querySelector(".dragging");
+      if (dragging !== turn) {
+        turn.classList.add("drag-over");
+      }
+    });
+
+    turn.addEventListener("dragleave", () => {
+      turn.classList.remove("drag-over");
+    });
+
+    turn.addEventListener("drop", async (e) => {
+      e.preventDefault();
+      turn.classList.remove("drag-over");
+      const dragData = JSON.parse(e.dataTransfer.getData("text/plain"));
+      const draggedIndex = dragData.index;
+      const droppedIndex = parseInt(turn.dataset.index);
+
+      if (draggedIndex !== droppedIndex && dragData.title === title && dragData.date === date) {
+        const currentUsers = userOrder.slice();
+        [currentUsers[draggedIndex], currentUsers[droppedIndex]] = [currentUsers[droppedIndex], currentUsers[draggedIndex]];
+        const draggedTurnData = turns[draggedIndex];
+        const droppedTurnData = turns[droppedIndex];
+        turns[draggedIndex] = { ...droppedTurnData, user: currentUsers[draggedIndex], index: draggedIndex };
+        turns[droppedIndex] = { ...draggedTurnData, user: currentUsers[droppedIndex], index: droppedIndex };
+        const draggedTurn = turnEntries[draggedIndex];
+        const droppedTurn = turnEntries[droppedIndex];
+        const draggedUser = currentUsers[draggedIndex];
+        const droppedUser = currentUsers[droppedIndex];
+        const draggedStatus = turns[draggedIndex].isCompleted ? 'Accepted' : turns[draggedIndex].isPending ? 'Waiting for Review' : 'Pending';
+        const droppedStatus = turns[droppedIndex].isCompleted ? 'Accepted' : turns[droppedIndex].isPending ? 'Waiting for Review' : 'Pending';
+        draggedTurn.querySelector("p").textContent = `Turn ${draggedIndex + 1}: ${draggedUser} - ${draggedStatus}`;
+        droppedTurn.querySelector("p").textContent = `Turn ${droppedIndex + 1}: ${droppedUser} - ${droppedStatus}`;
+        draggedTurn.dataset.user = draggedUser;
+        droppedTurn.dataset.user = droppedUser;
+        await handleReorder(title, date, currentUsers);
+      }
+    });
+  });
+});
+
 
     if (!container.innerHTML) {
       container.innerHTML = "<p>No tasks for this date.</p>";
