--- a/register.html
+++ b/register.html
@@ -287,8 +287,8 @@
     <div class="logo">
       <img src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png" alt="BeeMazing Logo">
     </div>
-    <h2 id="formTitle">Register z2</h2>
-    <form id="authForm">
+    <h2 id="formTitle">Register z3</h2>
+    <form id="authForm" novalidate>
       <div id="emailGroup" class="input-group email">
         <input type="email" id="email" placeholder="Email" required />
       </div>
